--- a/display.html
+++ b/display.html
@@ -7,7 +7,9 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="title1">Discover What's Next</div>
-		<div class="subtitle1">A Future Career In</div>
+		<div class="display">
+			<div class="title1">Discover What's Next</div>
+			<div class="subtitle1">A Future Career In</div>
+		</div>
 	</body>
 </html>
