--- a/savedImages/upload.html
+++ b/savedImages/upload.html
@@ -2,11 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
-		<link rel="stylesheet" href="style.css" />
-		<script type="text/javascript" src="script.js"></script>
+		<title>You shouldn't read this</title>
+		<script type="text/javascript" src="upload.js"></script>
 	</head>
 	<body>
-		<div>Nope</div>
+		<input type="file" value="Upload" />
 	</body>
 </html>
