--- a/app.html
+++ b/app.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<div class="header">College and Career Center</div>
-		<a href="savedImages/upload.html" id="uploadImage" class="btn">Upload Image</a>
+		<a href="#savedImages/upload.html" id="uploadImage" class="btn">Upload Image</a>
+		<div id="uploadHolder"></div>
 		<div class="main">
 			<form id='form' target="preview" action='display.html' method='get'>
 				<h1>I'm Interested In...</h1>
